syntax = "proto3";

option csharp_namespace = "Fei.Is.Api.Protos";

package store_data;

service StoreDataService {
    rpc StoreData (StoreDataRequest) returns (StoreDataResponse);
}

message DataPoint {
    string device_id = 1;
    string sensor_tag = 2;
    int64 timestamp = 3;
    double value = 4;
}

message StoreDataRequest {
    repeated DataPoint data_points = 1;
}

message StoreDataResponse {
    bool success = 1;
}